--- a/MatchGame/MainWindow.xaml
+++ b/MatchGame/MainWindow.xaml
@@ -36,6 +36,7 @@
         <TextBlock Text="?" FontSize="50" Grid.Row="3" Grid.Column="1" HorizontalAlignment="Center" VerticalAlignment="Center" MouseDown="TextBlock_MouseDown"/>
         <TextBlock Text="?" FontSize="50" Grid.Row="3" Grid.Column="2" HorizontalAlignment="Center" VerticalAlignment="Center" MouseDown="TextBlock_MouseDown"/>
         <TextBlock Text="?" FontSize="50" Grid.Row="3" Grid.Column="3" HorizontalAlignment="Center" VerticalAlignment="Center" MouseDown="TextBlock_MouseDown"/>
+        <TextBlock x:Name="TimeTextBlock" Grid.Row="4" Text="Elapsed Time" TextWrapping="Wrap" VerticalAlignment="Center" Grid.ColumnSpan="4" HorizontalAlignment="Center" FontSize="36" MouseDown="TimeTextBlock_MouseDown"/>
 
     </Grid>
 </Window>
